<resources>
    <string name="app_name">stocksTips</string>

    // Main screen
    <string name="main_screen_title">Stock Champ</string>
    <string name="portfolio">My Portfolio</string>
    <string name="search_stocks">Search Stocks</string>
    <string name="top_stocks">Top Users Stocks</string>
    <string name="bearOrBull">Bear Or Bull?</string>
    <string name="sign_in">Sign in now to make an impact</string>
    <string name="sign_in_signed_user">Welcome: %1$s</string>

    // Menu
    <string name="first_option">About Stock Champ...</string>
    <string name="second_option">Terms and Conditions</string>
    <string name="third_option">third_option</string>
    <string name="backdrop_button_1">Coming Soon...</string>


    // stock item
    <string name="stock_symbol">Stock Symbol: %s</string>
    <string name="stock_price">Price: %s</string>
    <string name="stock_name">Name: %s</string>


    // stock info
    <string name="stock_info_title">Stock Info</string>

    <string name="stock_info_symbol">Symbol:</string>
    <string name="stock_info_name">Name:</string>
    <string name="stock_info_price">Price:</string>
    <string name="stock_info_change">Change:</string>
    <string name="stock_info_latest_trading_day">Latest Trading Day:</string>
    <string name="stock_info_volume">Volume:</string>

    <string name="stock_info_button_save">Add To Your Stock List</string>


    <string name="send_your_portfolio_dailog_title">Are you sure you want to start your portfolio?</string>
    <string name="send_your_portfolio_dailog_subtitle">will start from next trading day</string>
    <string name="your_portfolio_saved_on">your portfolio saved at: %1$s, %2$s</string>
    <string name="stock_cost">"%1$s $"</string>
    <string name="total_value">"total value: %1$s $"</string>
    <string name="stock_list_full_title">"your 3 selected stocks:"</string>
    <string name="stock_list_title">"complete your stocks selection: %1$d out of 3"</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>


    // top stocks
    <string name="top_stocks_title">Users Top Stocks: </string>
    <string name="top_stocks_first_stock">#1</string>
    <string name="top_stocks_second_stock">#2</string>
    <string name="top_stocks_third_stock">#3</string>

    <!--Fonts-->
    <string name="sans_serif_medium" translatable="false">sans-serif-medium</string>
    <string name="sans_serif_regular" translatable="false">sans-serif</string>
    <string name="sans_serif_light" translatable="false">sans-serif-light</string>

    // GLOBAL
    <string name="global_ok">OK</string>


    // Dialog
    <string name="dialog_positive_button_text_ok">"OK"</string>

    // please login
    <string name="dialog_info_please_login_title">"INFO"</string>
    <string name="dialog_info_please_login_message_text">"Please login in order to send your selection"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    // bearOrBull screen
    <string name="bear_or_bull_title">Users Votes</string>
    <string name="bear_or_bull_question">will Nasdaq is going to close green or red?</string>


</resources>
