<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.roeyc.stockapp.overview.OverviewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".overview.OverviewFragment">

        <LinearLayout
            android:id="@+id/back_drop_menu"
            style="@style/Widget.StockChamp.Backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="100dp">
            <include layout="@layout/menu_backdrop" />

        </LinearLayout>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/Widget.StockChamp.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_menu_black">

                <TextView
                    android:id="@+id/toolbar_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/main_screen_title"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />
            />
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:background="@color/productGridBackgroundColor"
            android:elevation="8dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageButton
                android:id="@+id/watch_list_button"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_work_black_24dp"
                app:layout_constraintEnd_toStartOf="@+id/divider_1"
                app:layout_constraintTop_toTopOf="@+id/divider_1"
                app:layout_constraintBottom_toBottomOf="@+id/divider_1"/>

            <TextView
                android:id="@+id/stat_detail_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portfolio"
                android:textColor="#777"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/watch_list_button"
                app:layout_constraintStart_toStartOf="@+id/watch_list_button"
                app:layout_constraintTop_toBottomOf="@+id/watch_list_button" />

            <View
                android:id="@+id/divider_1"
                android:layout_width="5dp"
                android:layout_height="90dp"
                android:background="#ccc"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.65" />

            <ImageButton
                android:id="@+id/search_button"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_search_black_24dp"
                app:layout_constraintTop_toTopOf="@+id/watch_list_button"
                app:layout_constraintStart_toEndOf="@+id/divider_1" />

            <TextView
                android:id="@+id/stat_detail_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/search_stocks"
                android:textColor="#777"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/search_button"
                app:layout_constraintStart_toStartOf="@+id/search_button"
                app:layout_constraintTop_toBottomOf="@+id/search_button" />

            <ImageButton
                android:id="@+id/top_ranks_button"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_storage_black_24dp"
                app:layout_constraintEnd_toEndOf="@+id/divider_1"
                app:layout_constraintStart_toStartOf="@+id/divider_1"
                app:layout_constraintTop_toBottomOf="@+id/divider_1" />

            <TextView
                android:id="@+id/top_ranks_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/top_stocks"
                android:textAlignment="center"
                android:textColor="#777"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/top_ranks_button"
                app:layout_constraintStart_toStartOf="@+id/top_ranks_button"
                app:layout_constraintTop_toBottomOf="@+id/top_ranks_button" />

            <ImageButton
                android:id="@+id/market_bear_or_bull_button"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_people_outline_24"
                app:layout_constraintEnd_toEndOf="@+id/divider_1"
                app:layout_constraintStart_toStartOf="@+id/divider_1"
                app:layout_constraintBottom_toTopOf="@+id/divider_1" />

            <TextView
                android:id="@+id/market_bear_or_bull_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/bearOrBull"
                android:textAlignment="center"
                android:textColor="#777"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/top_ranks_button"
                app:layout_constraintStart_toStartOf="@+id/top_ranks_button"
                app:layout_constraintBottom_toTopOf="@+id/market_bear_or_bull_button" />

            <ImageButton
                android:id="@+id/sign_in_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="250dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/ic_sign_in_24dp"
                app:layout_constraintBottom_toTopOf="@+id/divider_1"
                app:layout_constraintEnd_toEndOf="@+id/divider_1"
                app:layout_constraintStart_toStartOf="@+id/divider_1" />

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="#777"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
                app:layout_constraintStart_toStartOf="@+id/sign_in_button"
                app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

            <ImageButton
                android:id="@+id/sign_out_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="250dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:scaleType="fitXY"
                android:src="@android:drawable/btn_dialog"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/divider_1"
                app:layout_constraintEnd_toEndOf="parent"
                tools:visibility="invisible" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
